2004-07-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uuencode.man: Polished a bit (options, keywords).
	* yencode.man: 

2004-07-19  Andreas Kupries  <andreask@activestate.com>

	* base64.man: Added copyright notes for the early authors, as far
	  as I am aware of them.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uuencode.tcl: Updated version number to sync with 1.6.1
	* uuencode.man: release
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uuencode.tcl: Rel. engineering. Updated version number 
	* uuencode.man: of uuencode to reflect its changes, to 1.1.1.
	* pkgIndex.tcl:

2004-03-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* uuencode.tcl (::uuencode::pad): don't use log package

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-10-24  Andreas Kupries  <andreask@activestate.com>

	* base64.test:
	* base64.tcl: Applied patch fixing [Bug 821126]. Variable 'output'
	  is now initialized to empty to have it defined at all
	  times. Extended testsuite to cover the fixed cases.

2003-10-21  Andreas Kupries  <andreask@activestate.com>

	* base64.tcl: Added code to the Trf supported 'decode'r to ignore
	  whitespace in hte encoded input. [Bug 736900].

2003-07-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* base64c.tcl: Added the placeholder package.

2003-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* Merged DEVELOPMENT branch from DEVELOPMENT-root to
	DEVELOPMENT-merge-1 This brings in the critcl enhancements for
	uuencode and yencode along with a few extra tests for yencode.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 
