@@ -2,7 +2,7 @@
 [manpage_begin bee n 0.1]
 [copyright {2004 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {BitTorrent}]
-[titledesc {BitTorrent Encoder/Decoder}]
+[titledesc {BitTorrent Serialization Format Encoder/Decoder}]
 [require Tcl 8.2]
 [require bee [opt 0.1]]
 [description]
@@ -10,7 +10,7 @@
 
 The [package bee] package provides de- and encoder commands for data
 in bencoding (speak 'bee'), the serialization format for data and
-messages used by BitTorrent.
+messages used by the BitTorrent application.
 
 [para]
 
@@ -189,7 +189,7 @@ still active will fail with an error message.
 
 The command prefix [arg cmdprefix] specified by the [emph required]
 option [option -command] is used to report extracted values and
-exceptional situations (error, and eof on the channel).
+exceptional situations (error, and EOF on the channel).
 
 The callback will be executed at the global level of the interpreter,
 with two or three arguments. The exact call signatures are
@@ -199,7 +199,7 @@ with two or three arguments. The exact call signatures are
 [call [cmd cmdprefix] [method eof] [arg token]]
 
 The decoder has reached eof on the channel [arg chan]. No further
-invokations of the callback will be made after this. The channel has
+invocations of the callback will be made after this. The channel has
 already been closed at the time of the call, and the [arg token] is
 not valid anymore as well.
 
@@ -214,7 +214,7 @@ i.e. invalid. The channel however is kept open.
 
 [call [cmd cmdprefix] [method value] [arg token] [arg value]]
 
-The decoder received and sucessfully decoded a bee-value.
+The decoder received and successfully decoded a bee-value.
 
 The format of the equivalent tcl [arg value] is the same as returned
 by [cmd ::bee::decode]. The channel is still open and the decoder
@@ -344,5 +344,5 @@ a digit.
 
 [section EXAMPLES]
 
-[keywords bee bittorrent serialization torrent]
+[keywords bee bittorrent serialization torrent BitTorrent]
 [manpage_end]
